Add utility classes for byte formatting, tokenization, and shell context management; refactor network and utility commands for improved error handling and readability